methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:69: error: Unit does not take parameters
bacDeFleurs()
           ^FlowerCase:77: error: Unit does not take parameters
bacDeFleurs() 
           ^